alb_listener.tf
# --------------------------------------------------------------------------------------------------
# ALB Listeners
# --------------------------------------------------------------------------------------------------
resource "aws_lb_listener" "l1_alb_listener" {
  count             = var.http_listener_required ? 1 : 0
  load_balancer_arn = aws_lb.jenkins.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}
resource "aws_alb_listener" "alb_listener" {
  depends_on        = [aws_autoscaling_group.jenkins]
  load_balancer_arn = aws_lb.jenkins.arn
  port              = "443"
  protocol          = "HTTPS"
  certificate_arn   = var.certificate_arn

  default_action {
    target_group_arn = aws_lb_target_group.alb_target_group.arn
    type             = "forward"
  }
}
